[package]
name = "fronma"
version = "0.1.0"
edition = "2018"
description = "Front Matter parser."
homepage = "https://github.com/r7kamura/fronma"
license = "MIT"
readme = "README.md"
repository = "https://github.com/r7kamura/fronma"
include = ["src/**/*", "LICENSE.txt", "README.md"]
keywords = ["front-matter"]

[dependencies]
serde = "~1.0"
serde_json = { version = "~1.0", optional = true }
serde_yaml = { version = "~0.8", optional = true }
toml = { version = "~0.5", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
serde = { version = "1.0.130", features = ["derive"] }

[features]
default = ["serde_yaml"]
json = ["serde_json"]
